--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -100,3 +100,7 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+.hoverEffect {
+  @apply hover:scale-110 transition-all duration-300;
+}
