--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -101,6 +101,20 @@ body {
   }
 }
 
+body {
+  @apply overflow-hidden bg-cover
+}
+
 .hoverEffect {
   @apply hover:scale-110 transition-all duration-300;
+}
+
+/* Add this CSS to your global stylesheet or a CSS module */
+.custom-scrollbar {
+  scrollbar-width: none; /* For Firefox */
+  -ms-overflow-style: none; /* For Internet Explorer and Edge */
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+  display: none; /* For Chrome, Safari, and Opera */
 }
